Bogus -Xcheck:jni warning for SIG_INT action for SIGINT in JVM started from non-interactive shell

XMLWordPrintable

    • b08
    • generic
    • linux

        On Linux, any java -Xcheck:jni command started from a non-interactive shell will print the warning "Warning: SIGINT handler expected:libjvm.so+0x3116e0 found:0x00000001".

        sbohne/nova2.East.Sun.COM> sh -c "java -showversion -Xcheck:jni -jar /usr/sbohne/jdk7-b09/demo/jfc/Java2D/Java2Demo.jar &"
        sbohne/nova2.East.Sun.COM> java version "1.7.0-ea"
        Java(TM) SE Runtime Environment (build 1.7.0-ea-b09)
        Java HotSpot(TM) Client VM (build 1.7.0-ea-b09, mixed mode, sharing)

        Warning: SIGINT handler expected:libjvm.so+0x3116e0 found:0x00000001
        Signal Handlers:
        SIGSEGV: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGBUS: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGFPE: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGPIPE: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGXFSZ: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGILL: [libjvm.so+0x30f900], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGUSR1: SIG_DFL, sa_mask[0]=0x00000000, sa_flags=0x00000000
        SIGUSR2: [libjvm.so+0x311940], sa_mask[0]=0x00000000, sa_flags=0x10000004
        SIGHUP: [libjvm.so+0x3116e0], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGINT: SIG_IGN, sa_mask[0]=0x00000000, sa_flags=0x00000000
        SIGTERM: [libjvm.so+0x3116e0], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004
        SIGQUIT: [libjvm.so+0x3116e0], sa_mask[0]=0x7ffbfeff, sa_flags=0x10000004

        sbohne/nova2.East.Sun.COM> uname -a
        Linux nova2.East.Sun.COM 2.6.18-1.2798.fc6xen #1 SMP Mon Oct 16 15:11:19 EDT 2006 i686 athlon i386 GNU/Linux
        sbohne/nova2.East.Sun.COM> cat /etc/*release*
        Fedora Core release 6 (Zod)

              Assignee:
              Yumin Qi
              Reporter:
              Steve Bohne (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: